--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.3.6",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-date-picker": "^4.2.14",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.7.1",
     "react-native-maps-directions": "^1.9.0",
