--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-date-picker": "^4.2.14",
